# ProgressBar

./: AbstractSubject.cpp  AbstractSubject.h  Button.cpp  Button.h  CMakeLists.txt  Observer.h  ProgressBar.cpp  ProgressBar.h  ProgressDialog.cpp  ProgressDialog.h  ShowButton.cpp  ShowButton.h  TagReader.cpp  TagReader.h  main.cpp
Music/: README.md
result/: metadata.txt  metadata2.txt
tests/: CMakeLists.txt  TestProgressDialog.cpp  TestProgressDialog.h  TestTagReader.cpp  TestTagReader.h  run_test.cpp
tests/TestSongs/: test_read.txt
